Bug fixes (#397)
* PLT-8256 - Updating scrollbar in search results

* PLT-8232 - Updating favicon with a background

* PLT-8232 - Updating favicon bg

* PLT-8225 - Removing spaces from sidebar button

* PLT-8206 - Fixing code block formatting in header

* PLT-8169 - Updating DM description hover state

* PLT-8090 - Updating alignment of modal rows

* PLT-8109 - Updating tooltip on select team page

* Updating favicon and fixing conflict

--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -608,6 +608,7 @@
     }
 
     .more-modal__details {
+        align-self: center;
         flex-grow: 1;
         flex-shrink: 1;
         overflow: hidden;
@@ -635,6 +636,10 @@
         overflow: hidden;
         text-overflow: ellipsis;
         white-space: nowrap;
+
+        &:empty {
+            display: none;
+        }
     }
 
     .more-modal__row {
